build_logs.txt
C:\Users\olik\Desktop\Hytale\Plugins\HytalePortal\src\main\java\dev\jsemolik\hytaleportal\listeners\PortalTeleportListener.java:220: error: cannot find symbol
                playerRef.getReference().getPosition().x,
                                        ^
  symbol:   method getPosition()
  location: class Ref<EntityStore>
C:\Users\olik\Desktop\Hytale\Plugins\HytalePortal\src\main\java\dev\jsemolik\hytaleportal\listeners\PortalTeleportListener.java:221: error: cannot find symbol
                playerRef.getReference().getPosition().y,
                                        ^
  symbol:   method getPosition()
  location: class Ref<EntityStore>
C:\Users\olik\Desktop\Hytale\Plugins\HytalePortal\src\main\java\dev\jsemolik\hytaleportal\listeners\PortalTeleportListener.java:222: error: cannot find symbol
                playerRef.getReference().getPosition().z,
                                        ^
  symbol:   method getPosition()
  location: class Ref<EntityStore>
